<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuDetails">


    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/__pizza_order"
        tools:ignore="MissingConstraints"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/foodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:text="@string/pepper"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/foodImage" />

    <TextView
        android:id="@+id/foodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:text="@string/price"
        android:textColor="#733f0e"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage" />

    <TextView
        android:id="@+id/foodDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:gravity="start|top"
        android:text="@string/desc_menu"
        android:textAlignment="viewStart"
        android:textColor="#733f0e"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/foodPrice" />

    <Button
        android:id="@+id/orderNowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="#d52f2f"
        android:text="@string/labelBtnOrder"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@id/backBtn" _toBottomOf="@+id/foodDescription"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="#d52f2f"
        android:text="@string/labelBtnBack"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>